--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div id="qa-block">
-  <div>
+<div class="first" id="qa-block">
+  <div class="second">
   <p>In programming languages, a closure is a
   technique for implementing lexically
   scoped name binding in a language with
@@ -23,15 +23,15 @@
   together with an environment.</p>
   </div>
 </div>
-<div>
-  <div>
+<div class="first">
+  <div class="second">
   <p>У програмуванні замиканням називають підпрограму, що виконується в середовищі,
   яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
   змінних під час виконання.</p>
   </div>
 </div>
-<div>
-  <div>
+<div class="first">
+  <div class="second">
   <p>Замыкание в программировании — функция первого класса, в теле которой присутствуют
   ссылки на переменные, объявленные вне тела этой функции в окружающем
   коде и не являющиеся её параметрами.</p>
