--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="first" id="qa-block">
-  <div class="second">
-  <p>In programming languages, a closure is a
+<div class="main first" id="qa-block">
+  <div class="main second">
+  <p class="main">In programming languages, a closure is a
   technique for implementing lexically
   scoped name binding in a language with
   first-class functions. Operationally, a
@@ -23,16 +23,16 @@
   together with an environment.</p>
   </div>
 </div>
-<div class="first">
-  <div class="second">
-  <p>У програмуванні замиканням називають підпрограму, що виконується в середовищі,
+<div class="main first">
+  <div class="second main">
+  <p class="main">У програмуванні замиканням називають підпрограму, що виконується в середовищі,
   яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
   змінних під час виконання.</p>
   </div>
 </div>
-<div class="first">
-  <div class="second">
-  <p>Замыкание в программировании — функция первого класса, в теле которой присутствуют
+<div class="main first">
+  <div class="main second">
+  <p class="main">Замыкание в программировании — функция первого класса, в теле которой присутствуют
   ссылки на переменные, объявленные вне тела этой функции в окружающем
   коде и не являющиеся её параметрами.</p>
   </div>
